<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_color_login"
    android:padding="16dp">


    <TextView
        android:id="@+id/select_role_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:text="@string/select_role_text"
        android:textColor="@color/white"
        android:textSize="20dp"
        app:layout_constraintBottom_toTopOf="@+id/select_role_text_desc" />

    <TextView
        android:id="@+id/select_role_text_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="40dp"
        android:gravity="center"
        android:text="@string/select_role_text_desc"
        android:textColor="@color/white"
        android:textSize="16dp"
        app:layout_constraintBottom_toTopOf="@+id/selectrole_constraint_layout" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/selectrole_constraint_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/layout_role1"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@drawable/rounded_white_background"
            android:orientation="horizontal"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:src="@drawable/advocate_icon" />

            <TextView
                android:id="@+id/text_advocaterole"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/advocate_role_text"
                android:textColor="@color/black"
                android:textSize="25dp" />
        </LinearLayout>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_role2"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/rounded_white_background"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@+id/layout_role1">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:src="@drawable/civilian_icon"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/text_civilianerole"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/civilian_role_text"
                android:textColor="@color/black"
                android:textSize="25dp"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/text_civilianerole_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:gravity="center"
                android:text="@string/civilian_role_text_desc"
                android:textColor="@color/black"
                android:textSize="12dp"
                app:layout_constraintTop_toBottomOf="@+id/text_civilianerole" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <Button
            android:id="@+id/button_continue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:background="@drawable/rounded_button"
            android:text="CONTINUE"
            android:textSize="16dp"
            app:layout_constraintTop_toBottomOf="@+id/layout_role2" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>